--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -9,6 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="YS Display-Bold.ttf">
+            <string>YSDisplay-Bold</string>
+        </array>
         <array key="YS Display-Medium.ttf">
             <string>YSDisplay-Medium</string>
         </array>
@@ -48,10 +51,15 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="yXu-NJ-J2g" secondAttribute="height" multiplier="2:3" id="vcC-0e-z2E"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YYg-TN-ayK" userLabel="Question Label">
-                                        <rect key="frame" x="41" y="579.5" width="292" height="62.5"/>
-                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YYg-TN-ayK" userLabel="Question Label">
+                                        <rect key="frame" x="16.5" y="579.5" width="341" height="62.5"/>
+                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                         <color key="textColor" name="YP White"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -121,7 +129,9 @@
                     <connections>
                         <outlet property="counterLabel" destination="yGQ-wW-VSU" id="tfy-Pe-ZlZ"/>
                         <outlet property="imageView" destination="yXu-NJ-J2g" id="gch-th-zre"/>
+                        <outlet property="noButton" destination="6hP-ng-ou3" id="saA-ic-qXD"/>
                         <outlet property="textLabel" destination="YYg-TN-ayK" id="AoK-Fz-jhn"/>
+                        <outlet property="yesButton" destination="fC2-qW-Qr7" id="U07-Hq-Ucq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
